refactor(safety-net): inject ProductTaxRateCalculator via constructor + fix misleading mock (T2, T4)
Service now takes ProductTaxRateCalculator as a single constructor
parameter (Spring autodetects). Removes the inline
new ProductTaxRateCalculator() inside generateInvoice. The existing
"misleading @Mock" pattern (C-5) is now actually wired — Mockito's
@InjectMocks satisfies the constructor with the @Mock, and stubs on
the calculator are observed by the SUT.

The two existing test methods are rewritten to verify the *rate
selection* (the part the service is responsible for) by stubbing the
calculator and asserting the rate it received. Tax math itself is
covered by T1's calculator-level tests.

Folds in T4 (test data builders) because the rewritten existing tests
use Orders.fisica / Orders.juridica to construct fixtures — without
them the test would be too verbose to refactor cleanly. Future task
classes (T5..T14) reuse the same builders.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>